tests/errors/chained_comparison_in.ki
var xs = [1, 2, 3]
discard 2 in xs in xs
